# solana-program

./: .env  .gitignore  Anchor.toml  Cargo.toml  README.md  package.json
backend/backend/: Cargo.toml
backend/backend/src/: main.rs
programs/kyc_dao/: Cargo.toml
programs/kyc_dao/src/: context.rs  error.rs  get_price.rs  instruction.rs  lib.rs  state.rs
programs/kyc_dao/src/instructions/: mod.rs  utils.rs
programs/kycdao-cpi-example/: Cargo.toml
programs/kycdao-cpi-example/src/: lib.rs
programs/ntnft/: Cargo.toml
programs/ntnft-cpi-example/: Cargo.toml
programs/ntnft-cpi-example/src/: lib.rs
programs/ntnft/src/: lib.rs  state.rs  verify_signature.rs
programs/solana-program/: Cargo.toml
programs/solana-program/src/: lib.rs
programs/solana-program/src/instructions/: get_price.rs
scripts/: getLogIncluding.ts  getLogInluding.ts  getPastEvents.ts  getTransactionSignatures.ts  initializeCandyMachine.ts  initializeCollection.ts  initializeStateMachine.ts  privateKeyExporter.ts  updateCandyMachine.ts  updateCollection.ts  updateStateMachine.ts
tests/: authMint.test.ts  controller.test.ts  logsController.test.ts  mintController.test.ts  mintNft.test.ts  mintWithArgs.test.ts  oneClickTestAll.test.ts  solana-program.ts
tests/cpiExample/: cpiExample.ts
tests/kycdao/: logsController.test.ts  mintWithArgs.test.ts
tests/signatures/: solana-eth-signatures.ts
tests/utils/: constants.ts  utils.ts
utils/: closeTokenAccount.ts  constants.ts  ethSignature.ts  findTokenAccounts.ts  privateKeyExporter.ts  utils.ts
