[package]
name = "kyc_dao"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "kyc_dao"

[features]
no-entrypoint = []
 
[dependencies]
anchor-lang = "0.25.0"
# anchor-spl = "0.25.0"
spl-token = { version = "3.5.0", features = [ "no-entrypoint" ] }
pyth-sdk-solana = "0.6.1"
solana-program = "1.10.41"
solana-safe-math = "0.1.0"
mpl-token-metadata = { version = "1.4.3", features = ["no-entrypoint"] }