[package]
name = "kycdao-solana-ntnft"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "kycdao_solana_ntnft"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
 
[dependencies]
anchor-lang = "0.26"
anchor-spl = "0.26"
spl-token = { version = "3.1.1", features = [ "no-entrypoint" ] }
pyth-sdk-solana = "0.7.0"
solana-program = "^1.13.5"
solana-safe-math = "0.1.0"
mpl-token-metadata = { version = "1.4.3", features = ["no-entrypoint"] }